Feature/product slug checkout redesign (#431)
* Product Slug Update: change product base URL in the code
change the bike-tours with tours
Asana Task: https://app.asana.com/0/1206248876766799/1206907396742909/f

* Product Slug Update: use site_url for the action URL in the forms instead relative path

Asana Task: https://app.asana.com/0/1206248876766799/1206907396742909/f

* Product Slug Update: add rewrite rules, adjust product permalinks
add rw rules allowing taxonomy archive on tours url, adjust product permalinks, refactor archive page to can show taxonomy archive
Asana Task: https://app.asana.com/0/1206248876766799/1206907396742909/f

* Archive Product: add PLP Info and thumbnail for product taxonomies
Add PLP Travel Info fields to the product taxonomies, and create one more field for the thumbnails
Asana Task: https://app.asana.com/0/1206248876766799/1206907396742909/f

* Taxonomy Switcher: add a plugin to transfer categories to custom taxonomies

Asana Task: https://app.asana.com/0/1205472772784381/1207035515857539/f

* Destinations: transfer terms from destinations category to new taxonomy destination
add destination taxonomy, make rewrite rules, adjust archive and search page, add separate taxonomy template, adjust ACF field for the thumbnail
Asana Task: https://app.asana.com/0/1205472772784381/1207035515857539/f

* Destinations Slug: fix destination tax slug base to be tours/destinations

Asana Task: https://app.asana.com/0/1205472772784381/1207035515857539/f

* Theme Global Constants: collect all theme constants into one separate file
create a new file for the theme global constants, move current constants there
Asana Task: https://app.asana.com/0/1205472772784381/1207035515857539/f

* Product Slug Update: change biking to cycling and combine all hiking and walking to just one activity hiking-walking
add constants for the activities names from admin panel, make to use the constants into theme templates
Asana Task: https://

--- a/wp-content/themes/trek-travel-theme/src/scss/_header.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_header.scss
@@ -1,5 +1,8 @@
 .header-main {
   //
+  &.sticky-top {
+	top: var(--admin-bar-h);
+  }
   &__contact-nav {
     border-bottom: 1px solid $gray-200;
     display: none;
