--- a/wp-content/themes/trek-travel-theme/src/scss/checkout/_checkout-guest.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/checkout/_checkout-guest.scss
@@ -1,20 +1,32 @@
 .guest-checkout {
     font-family: 'Roboto' !important;
+	select {
+		// background-image: url('../../assets/images/checkout/Calendar.png') !important;
+		// background-repeat: no-repeat !important;
+		// background-position: right 12px center !important;
+		// background-size: unset !important;
+        -webkit-appearance: none;
+	}
+
     &-info {
-        margin-top: 32px;
-        &:nth-of-type(3) {
-            margin-bottom: unset;
-        }
+		margin-top: 1rem;
+		margin-bottom: 12px;
+		font-size: 1.5rem;
+		font-weight: 500;
+		line-height: 1.2;
+
+		&.small {
+			font-size: 1.25rem;
+			margin-bottom: 24px;
+		}
     }
-    select {
-        background-image: url('../../assets/images/checkout/Calendar.png') !important;
-        background-repeat: no-repeat !important;
-        background-position: 98% center !important;
-        background-size: unset !important;
-    }
+   
+   
     &-subinfo {
         margin-bottom: 24px;
+		line-height: 1.2;
     }
+
     &__primary-form {
         margin-bottom: 40px;
     }
@@ -26,13 +38,15 @@
             label {
                 font-family: 'Roboto';
                 font-weight: 400;
-                font-size: 16px;
-                line-height: 24px;
-                color: $gray-500;
+                font-size: 14px;
+                line-height: 1.2 !important;
+                color: $gray-300;
+				padding: 12px 20px
             }
             .form-control:not(:placeholder-shown)~label,
             .form-control:focus~label,
             .form-select ~ label {
+				display: none;
                 font-size: 12px !important;
                 line-height: 16px !important;
             }
@@ -43,14 +57,14 @@
             margin-top: 16px;
         }
     }
-    &__button {
-        padding: 16px 24px;
-        font-family: 'Roboto';
-        font-size: 16px;
-        line-height: 24px;
-        margin-top: 24px;
-        margin-bottom: 88px;
-    }
+    // &__button {
+    //     padding: 16px 24px;
+    //     font-family: 'Roboto';
+    //     font-size: 16px;
+    //     line-height: 24px;
+    //     margin-top: 24px;
+    //     margin-bottom: 88px;
+    // }
     &__checkbox-gap {
         gap: 10px;
     }
@@ -80,12 +94,18 @@
     }
     &__guest-number {
         gap: 24px;
-        margin-bottom: 40px;
+        margin-bottom: 22px;
         justify-content: space-between;
+        
         p {
-            font-size: 18px;
-            line-height: 28px;
+            font-size: 1.5rem;
+            line-height: 1.8rem;
         }
+    }
+
+	&__qty-wrap {
+		gap: 24px;
+
         #minus,
         #plus {
             cursor: pointer;
@@ -102,7 +122,7 @@
         input[type=number] {
             -moz-appearance: textfield;
         }
-    }
+	}
     &__qty {
         padding: 12px;
         gap: 16px;
@@ -121,28 +141,28 @@
             outline: unset;
         }
     }
-    @include media-breakpoint-up(lg) {
-        &-info {
-            margin-top: 40px;
-        }
-        &-subinfo {
-            margin-bottom: 32px;
-        }
-        &__primary-form-row {
-            gap: 20px;
-            margin-bottom: 20px;
-        }
-        &__guests {
-            hr {
-                margin-top: 20px;
-            }
-        }
-        &__guest-number {
-            justify-content: unset;
-            p {
-                font-size: 20px;
-                line-height: 30px;
-            }
-        }
-    }
+    // @include media-breakpoint-up(lg) {
+    //     &-info {
+    //         margin-top: 40px;
+    //     }
+    //     &-subinfo {
+    //         margin-bottom: 32px;
+    //     }
+    //     &__primary-form-row {
+    //         gap: 12px;
+    //         margin-bottom: 12px;
+    //     }
+    //     &__guests {
+    //         hr {
+    //             margin-top: 20px;
+    //         }
+    //     }
+    //     &__guest-number {
+    //         justify-content: unset;
+    //         p {
+    //             font-size: 20px;
+    //             line-height: 30px;
+    //         }
+    //     }
+    // }
 }
