--- a/wp-content/themes/trek-travel-theme/src/scss/_checkout.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_checkout.scss
@@ -1,3 +1,99 @@
+
+.trek-checkout {
+	--summary-card-background: linear-gradient(180deg, #000000 0%, #001A3B 30%, #28AAE1 60%, #7ECCED 100%);
+	--progress-bar-active: #28AAE1;
+	--alert-border-color: #28AAE1;
+	--validated-input-border: #28AAE1; 
+	--icon-color: #28AAE1;
+
+	&.checkout-style-hiking {
+		--summary-card-background: linear-gradient(180deg, #000000 0%, #1B4200 30%, #6B9214 60%, #BBE264 100%);
+		--progress-bar-active: #6B9214;
+	}
+
+	.modal {
+		.modal-dialog {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			width: inherit;
+
+			 @media ( max-width: 660px ) {
+					width: 85%;
+					margin: 0;
+				}
+
+				.modal-footer {
+					button {
+						@media screen and (max-width: 768px) {
+							color: var(--bs-btn-hover-color);
+							background-color: var(--bs-btn-hover-bg);
+							border-color: var(--bs-btn-hover-border-color);
+						}
+					}
+				}
+		}
+	}
+
+	.form-floating input[type="date"]:not(:valid),
+	.form-floating input[type="date"]:placeholder-shown  {
+			color: transparent;
+	}
+
+	input[type="date"] {
+		background-image: url('../../assets/images/checkout/calendar-icon.svg');
+		background-repeat: no-repeat;
+		background-position: 93% center;
+		background-size: 13px;
+		border: 1px solid #ccc;
+		padding: 5px;
+		border-radius: 4px;
+		width: 100%;
+		position: relative;
+
+		/* Hide the default icon by setting its opacity to 0 */
+		&::-webkit-inner-spin-button,
+		&::-webkit-calendar-picker-indicator {
+			opacity: 0;
+			position: absolute;
+			right: 0;
+			width: 100%;
+			height: 100%;
+			cursor: pointer; 
+		}
+
+			&::-webkit-date-and-time-value {
+				text-align: left;
+			}
+
+			&::placeholder {
+				font-weight: 400;
+				font-size: 16px;
+				line-height: 24px;
+				color: $gray-500;
+			}
+	}
+
+	input[type="date"]::before {
+		color: #CCC; 
+		font-size: 14px;
+		content: attr(placeholder);
+		display: block;
+		width: 100%;
+		position: absolute;
+	}
+
+	input[type="date"]:focus::before,
+	input[type="date"]:valid::before {
+		content: '';
+	}
+}
+
+body.trek-checkout:not(.admin-bar) .mx-0.checkout-trek.pt-5 {
+	padding-bottom: 20px;
+}
+
 @import 'checkout/checkout-timeline';
 @import 'checkout/checkout-guest';
 @import 'checkout/checkout-hotel';
@@ -6,39 +102,114 @@
 @import 'checkout/checkout-reviews';
 @import 'checkout/checkout-summary';
 
-.select2-container{
-    .select2-selection--single {
-        padding-top: 1.625rem;
-        padding-bottom: 0.625rem;
-        height: 58px;
-        border: 1px solid #ced4da;
-        .select2-selection__rendered {
-            line-height: 20px;
-            color: #212529;
-        }
-        .select2-selection__arrow {
-            b {
-                background-image: url('../../assets/images/checkout/Calendar.png') !important;
-                background-repeat: no-repeat !important;
-                background-position: 98% center !important;
-                background-size: unset !important;
-                margin-top: 3px;
-                right: 6.5px;
-                height: 24px;
-                width: 24px;
-                border-color: unset;
-                border-style: unset;
-                border-width: unset;
-                left: unset;
-                margin-left: unset;
-            }
-        }
-    }
-} 
+
+#tt-review-order {
+	position: sticky;
+	top: calc( var(--header-height) + var(--admin-bar-h) );
+}
+
+.title-poppins {
+	font-family: "Poppins";
+}
+
 .checkout-trek {
+	display: grid;
+	gap: 40px;
+
+	.checkout-timeline__progress-bar ul li.active {
+		border: 2px solid var(--progress-bar-active);
+		background-color: var(--progress-bar-active);
+	}
+
     @include media-breakpoint-up(lg) {
-        justify-content: space-between;
+		grid-template-columns: minmax(0,1fr) 476px;
     }
+
+	.info-img {
+		flex: 0 0 auto;
+
+		path {
+			fill: var(--icon-color)
+		}
+	}
+
+	.select2-container{
+		.select2-selection--single {
+			padding: 12px 20px;
+			height: 42px;
+			border: 1px solid #ced4da;
+			
+			.select2-selection__placeholder {
+				color: #C6C6C6;
+			}
+	
+			.select2-selection__rendered {
+				line-height: 20px;
+				color: #212529;
+				padding: 0;
+			}
+	
+			.select2-selection__arrow {
+				height: 42px;
+				top:0;
+				right: 0;
+				width: 24px;
+	
+				b {
+					background-image: url('../../assets/images/checkout/Calendar.png') !important;
+					background-repeat: no-repeat !important;
+					background-position: 98% center !important;
+					background-size: unset !important;
+					top:0;
+					margin-top: 0;
+					right: 20px;
+					height: 42px;
+					width: 24px;
+					border-color: unset;
+					border-style: unset;
+					border-width: unset;
+					left: unset;
+					margin-left: unset;
+				}
+			}
+		}
+	} 
+
+
+	hr {
+		border-color: #C6C6C6;
+	}
+
+	.btn {
+		--bs-btn-padding-x: 1.5rem;
+		--bs-btn-padding-y: 0.75rem;
+		--bs-btn-font-family: "Roboto";
+		--bs-btn-font-size: 1rem;
+		--bs-btn-font-weight: 500;
+		--bs-btn-line-height: 1.125rem;
+		--bs-btn-focus-box-shadow: none
+	}
+
+	textarea.form-control {
+		padding: 12px 20px;
+		&::placeholder {
+			color: #C6C6C6;
+			font-size: 14px;
+		}
+	}
+
+	.form-floating > .form-select,
+	.form-floating > .form-control,
+	.form-floating > .form-control-plaintext {
+		padding: 12px 20px;
+		height: auto;
+		font-size: 14px;
+		line-height: 1.2;
+
+		option[value=""]{
+			color: #C6C6C6;
+		}
+	}
     select.multi-select{
         height: auto !important;
         background-image: none !important;
@@ -51,6 +222,6 @@
     }
     .woocommerce-validated input, .woocommerce-validated select,
     .woocommerce-validated .woocommerce-validated input, .woocommerce-validated .woocommerce-validated select, .woocommerce-validated .select2-selection {
-        border-color: #6dc22e !important;        
+        border-color: var(--validated-input-border) !important;        
     }
 }
