--- a/wp-content/themes/trek-travel-theme/src/scss/_type.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_type.scss
@@ -1,6 +1,18 @@
 body {
   font-family: 'Roboto';
   // font-size: 20px;
+  --header-height: 66px;
+  --admin-bar-h: 0px;
+
+  &.admin-bar{
+	--admin-bar-h: 32px;
+	@media screen and (max-width: 782px) {
+		--admin-bar-h: 46px;
+	}
+  }
+  #wpadminbar {
+	position: fixed;
+  }
 }
 //
 // Headings
@@ -170,6 +182,14 @@ h5, .h5{
 
 .fw-medium{
   font-weight: $font-weight-medium;
+}
+
+.fw-normal {
+  font-weight: $font-weight-normal;
+}
+
+.fs-xxl{
+  font-size: 24px;
 }
 
 .fs-xl{
