--- a/wp-content/themes/trek-travel-theme/src/scss/checkout/_checkout-hotel.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/checkout/_checkout-hotel.scss
@@ -15,11 +15,18 @@
     }
     &__room-options{
         .bed-icon{
-            background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_1731_1673)'%3E%3Crect width='24' height='24' fill='white'/%3E%3Crect y='14' width='24' height='3' fill='%2328AAE1'/%3E%3Crect y='6' width='24' height='1' fill='%2328AAE1'/%3E%3Crect y='7' width='0.923077' height='5' fill='%2328AAE1'/%3E%3Crect x='23.0781' y='7' width='0.923077' height='5' fill='%2328AAE1'/%3E%3Crect y='12' width='24' height='1' fill='%2328AAE1'/%3E%3Cpath d='M6.5 10C4.875 10 1.48958 11 0 12H13C12.0521 11 8.125 10 6.5 10Z' fill='%2328AAE1'/%3E%3Cpath d='M17.5 10C15.875 10 12.4896 11 11 12H24C23.0521 11 19.125 10 17.5 10Z' fill='%2328AAE1'/%3E%3Crect x='21.2305' y='15' width='2.76923' height='3' fill='%2328AAE1'/%3E%3Crect y='15' width='2.76923' height='3' fill='%2328AAE1'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_1731_1673'%3E%3Crect width='24' height='24' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E");
-            background-repeat: no-repeat;
-            padding: 0 13px;
+			display: inline-block;
+			mask: no-repeat bottom center;
+			-webkit-mask: no-repeat bottom center;
+			mask-size: contain;
+			-webkit-mask-size: contain;
+			mask-image: url("data:image/svg+xml,%3Csvg width='24' height='13' viewBox='0 0 24 13' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M24 8.25H0V11.25H24V8.25Z' fill='%2328AAE1'/%3E%3Cpath d='M24 0.25H0V1.25H24V0.25Z' fill='%2328AAE1'/%3E%3Cpath d='M0.923077 1.25H0V6.25H0.923077V1.25Z' fill='%2328AAE1'/%3E%3Cpath d='M24.0012 1.25H23.0781V6.25H24.0012V1.25Z' fill='%2328AAE1'/%3E%3Cpath d='M24 6.25H0V7.25H24V6.25Z' fill='%2328AAE1'/%3E%3Cpath d='M6.5 4.25C4.875 4.25 1.48958 5.25 0 6.25H13C12.0521 5.25 8.125 4.25 6.5 4.25Z' fill='%2328AAE1'/%3E%3Cpath d='M17.5 4.25C15.875 4.25 12.4896 5.25 11 6.25H24C23.0521 5.25 19.125 4.25 17.5 4.25Z' fill='%2328AAE1'/%3E%3Cpath d='M23.9997 9.25H21.2305V12.25H23.9997V9.25Z' fill='%2328AAE1'/%3E%3Cpath d='M2.76923 9.25H0V12.25H2.76923V9.25Z' fill='%2328AAE1'/%3E%3C/svg%3E");
+			-webkit-mask-image: url("data:image/svg+xml,%3Csvg width='24' height='13' viewBox='0 0 24 13' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M24 8.25H0V11.25H24V8.25Z' fill='%2328AAE1'/%3E%3Cpath d='M24 0.25H0V1.25H24V0.25Z' fill='%2328AAE1'/%3E%3Cpath d='M0.923077 1.25H0V6.25H0.923077V1.25Z' fill='%2328AAE1'/%3E%3Cpath d='M24.0012 1.25H23.0781V6.25H24.0012V1.25Z' fill='%2328AAE1'/%3E%3Cpath d='M24 6.25H0V7.25H24V6.25Z' fill='%2328AAE1'/%3E%3Cpath d='M6.5 4.25C4.875 4.25 1.48958 5.25 0 6.25H13C12.0521 5.25 8.125 4.25 6.5 4.25Z' fill='%2328AAE1'/%3E%3Cpath d='M17.5 4.25C15.875 4.25 12.4896 5.25 11 6.25H24C23.0521 5.25 19.125 4.25 17.5 4.25Z' fill='%2328AAE1'/%3E%3Cpath d='M23.9997 9.25H21.2305V12.25H23.9997V9.25Z' fill='%2328AAE1'/%3E%3Cpath d='M2.76923 9.25H0V12.25H2.76923V9.25Z' fill='%2328AAE1'/%3E%3C/svg%3E");
+			background-color: var(--icon-color);
+           width: 1.5rem;
+		   height: 1.5rem;
             margin-left: 1rem;
-            background-position: bottom;
+            // background-position: bottom;
         }
     }
         &__add-occupants-btn, &__edit-occupants-btn{
@@ -42,19 +49,36 @@
         order: 2;
     }
 
+    @media (min-width: 460px) {
+        &__next-step{            
+            margin: 2rem auto;
+            display: flex;
+            justify-content: space-between;
+            align-items: baseline;            
+        }
+    }
+
     &__one-bed, &__two-bed, &__open-to-roommate, &__private{
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
         flex-direction: column;
         align-items: flex-start; 
+
+        @media (max-width: 991px) {
+            flex-direction: row;
+        }
     }       
         &__room-type{
             margin-bottom: 0;           
-            order: -1;            
+            order: -1;        
         }
         &__room-occupancy{            
-            order: -1;            
+            order: -1;   
+            @media (max-width: 991px) {
+                order: unset;
+                width: 100%;
+            }             
         }
         &__edit-occupants{ 
             display: flex;
@@ -67,16 +91,28 @@
             justify-content: space-between;
             order: 1;            
             align-items: baseline;
+            @media (max-width: 991px) {
+                order: unset;
+                justify-content: flex-end;
+            }    
+            @media (max-width: 767px) {
+                justify-content: space-between;
+                width: 100%;
+            } 
             .input-group{
                 width: 30%;
                 justify-content: flex-end;
                 button{
                     padding: 0;
                     --bs-btn-border-width: 0 !important;
+                    img {
+                        filter: invert(1);
+                    }
                     &:disabled{
                         border: none;
                         box-shadow: none;
                         opacity: 0.35;
+                        filter: invert(0);
                     }
                     &:hover, &:active, &:focus{
                         border-color: transparent;
@@ -97,6 +133,10 @@
     &__open-to-roommate, &__private{
         .price, .refund-info{
             order: 6;
+
+            @media (max-width: 991px) {
+                width: 100%;
+            }   
         }        
     }
 
@@ -193,6 +233,24 @@
         }
         .form-floating{
             margin-bottom: 1rem !important;
+
+            label {
+                opacity: 1;
+                background-color: white;
+                transform: scale(0.85) translateY(2px) translateX(0.15rem);
+                padding: 12px 20px;
+                display: block;
+            }
+
+            & > select:not(:placeholder-shown) ~ label {
+                display: none;
+            }
+
+            &.woocommerce-validated {
+                label {
+                    display: none;
+                }
+            }
         }
     }
     .modal-header{
