--- a/wp-content/themes/trek-travel-theme/src/scss/pages/hw-landing.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/pages/hw-landing.scss
@@ -1,6 +1,6 @@
 // COMMON + Spacing + TYPE
 
-body.page-template-tpl-landing-hw {
+.landing-page-container {
   p {
   font-size: 20px;
   line-height: 38px;
