--- a/wp-content/themes/trek-travel-theme/src/scss/_checkout.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_checkout.scss
@@ -147,6 +147,7 @@ body.trek-checkout:not(.admin-bar) .mx-0.checkout-trek.pt-5 {
 				line-height: 20px;
 				color: #212529;
 				padding: 0;
+				font-size: 14px;
 			}
 	
 			.select2-selection__arrow {
