Bugfix/show the hidden labels in the checklist form (#463)
* Post Booking Cehcklist: add locked checklist message
add message and lock icon to show when checklist or bike selection are locked
Asana Task: https://app.asana.com/0/1205828450090907/1207550643257730/f

* My Trips: fix a syntax error in the message

Asana Task: https://app.asana.com/0/1205828450090907/1207550643257730/f

* My Trips Checklist: fix label style
show the hiden labels
Asana Task: https://app.asana.com/0/1205828450090907/1207550643257730/f

* My Trips Checklist: add missing placeholders in th gear optional section

Asana Task: https://app.asana.com/0/1205828450090907/1207550643257730/f

--- a/wp-content/themes/trek-travel-theme/src/scss/myaccount/_mytrips-checklist.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/myaccount/_mytrips-checklist.scss
@@ -1,4 +1,4 @@
-.my-trips-checklist{
+.my-trips-checklist{ 
     .card{
         padding: 16px;
     }
@@ -171,5 +171,20 @@
     }
     .line-item-title{
         color: #000000;
+    }
+    // Fix form labels.
+    .guest-checkout {
+        &__primary-form-row {
+            .form-floating {
+                label {
+                    padding-left: 0.75rem;
+                }
+                .form-control:not(:placeholder-shown)~label,
+                .form-control:focus~label,
+                .form-select ~ label {
+                    display: block;
+                }
+            }
+        }
     }
 }
