--- a/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-itinerary.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-itinerary.scss
@@ -16,16 +16,29 @@
             color: $black;
         }
     }
+
+    .accordion {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
     .accordion-item {
-        border: unset;
+        // border: unset;
+        border: 1px solid #000;
+        border-style: solid !important;
+        border-radius: 4px;
         color: #000;
+        overflow: auto;
         .color-gray-6{
             color: $gray-600 !important;
         }
         .accordion-button{
-            border: 1px solid $gray-300;
-            border-radius: 4px;
-            margin: 8px auto;
+            // border: 1px solid $gray-300;
+            // border: 1px solid #000;
+            // border-style: solid !important;
+            // border-radius: 4px;
+            // margin: 8px auto;
+            border: none;
             &::after{
                 background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-plus-lg' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z'/%3E%3C/svg%3E");
             }
@@ -33,13 +46,15 @@
                 color: #000000;
                 box-shadow: none;
                 background-color: transparent;
-                border: 1px solid #000;
-                border-bottom: unset;
-                border-radius: 4px 4px 0 0;
+                // border: 1px solid #000;
+                // border-bottom: 0;
+                // border-radius: 4px 4px 0 0;
+                // border-style: solid !important;
                 &::after{
                     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-dash-lg' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z'/%3E%3C/svg%3E");
                 } 
             }
+            
             &:focus{
                 box-shadow: none;
             }
@@ -47,9 +62,9 @@
         .accordion-collapse {
             &.show,
             &.collapsing {
-                border: 1px solid black;
-                border-top: unset;
-                border-radius: 0 0 4px 4px;
+                // border: 1px solid black;
+                // border-top: unset;
+                // border-radius: 0 0 4px 4px;
             }
         }
         hr {
@@ -61,7 +76,7 @@
         }
         &__collapsearrival {
             flex-direction: column;
-            margin: 8px 0 11px 0;
+            // margin: 8px 0 11px 0;
         }
         &-ad {
             &__submain{
@@ -177,16 +192,17 @@
             }
             
         }
+        
         &-day__accordion{
             flex-direction: row;
-            gap: 80px;
+            // gap: 80px;
             margin-top: 16px;
             &-left {
-                width: 51%;
-                margin-right: 1rem;
+                // width: 51%;
+                // margin-right: 1rem;
             }
             &-right {
-                width: 31%;
+                // width: 31%;
                 margin-bottom: 0px;
                 img{
                     width: 304px;
@@ -265,6 +281,11 @@
     h3{
         line-height: 40px !important;
     }
+
+    .pdp-itinerary-day__accordion  {
+        justify-content: space-between;
+    }
+
     .pdp-itinerary-day__accordion-right{
         img{
             width: 100%;
@@ -288,16 +309,16 @@
             line-height: 48px !important;
         }
         .pdp-itinerary-day__accordion{
-            padding-right: 266px;
+            // padding-right: 266px;
             margin-bottom: 40px;
             .pdp-itinerary-day__accordion-left{
-                width: 57%;
+                // width: 57%;
             }
             .pdp-itinerary-day__accordion-right{
-                width: 29%;
+                // width: 29%;
                 img{
-                    width: 304px;
-                    height: 202px;
+                    width: 100%;
+                    height: 210px;
                     object-fit: cover;
                     border-radius: 4px;
                 }
@@ -321,30 +342,162 @@
 
     }
     @media print {
-        .accordion-body * {
-            break-inside: avoid;
-          }
+
+        // @page {
+        //     margin: 0; /* Set the margins to none */
+        // }
+    
+        // /* Additionally, you can set padding for the body or content */
+        // body {
+        //     padding: 0; /* Ensure no padding on the body */
+        // }
+
+        // .container, .container-fluid {
+        //     width: 100% !important;
+        //     max-width: 100% !important;
+        //     padding-left: 0 !important;
+        //     padding-right: 0 !important;
+        // }
+    
+        // /* Optionally, for rows and columns */
+        // .row {
+        //     margin-left: 0 !important;
+        //     margin-right: 0 !important;
+        // }
+        
+        // .col, .col-12 {
+        //     padding-left: 0 !important;
+        //     padding-right: 0 !important;
+        // }
+
+        // .accordion-body * {
+        //     break-inside: avoid;
+        //   }
+        // .accordion-item {
+        //     page-break-after: always;
+        //     &:last-child {
+        //         page-break-after: auto;
+        //    }
+        // }
+
+        .collapse-header {
+            display: none !important;
+        }
+    
+        .accordion-actions {
+            display: none !important;
+        }
+
+        .tour-actions {
+            display: none;
+        }
+
+
         .accordion-item {
-            page-break-after: always;
-            &:last-child {
-                page-break-after: auto;
-           }
+            // page-break-before: always; /* Start each accordion item on a new page */
+            // break-inside: avoid; /* Avoid breaking the accordion item across pages */
+            // margin-top: 5mm;
+            // &::before {
+            //     content: "";
+            //     display: block;
+            //     height: 5mm; /* Adjust the value as needed */
+            // }
+        }
+    
+        /* Optionally, ensure that the accordion header is always at the top of the page */
+        .accordion-header {
+            page-break-after: avoid; /* Prevent the header from being separated from its content */
+        }
+
+        .accordion-button .accordion-item__day {
+            break-inside: avoid;
+            page-break-after: avoid; /* Prevent the header from being separated from its content */
+        }
+        .accordion-item__day_text {
+            page-break-before: avoid;
+        }
+        img {
+            display: block;
+            max-width: 100%;
+            height: auto;
+            break-inside: avoid;
+            /* Override lazy load styles */
+        }
+    
+        /* Common lazy load classes */
+        .lazy, .lazyload {
+            opacity: 1 !important;
         }
 
         .waymark-shortcode {
-           transform: scale(0.8);
+        //    transform: scale(0.8);
+           display: block !important;
+           height: 500px; /* Or whatever height is appropriate */
+           width: 100%;
         }
+
+        .waymark-map {
+            width: 100% !important; /* Ensure map takes up full container width */
+            height: auto !important; /* Maintain aspect ratio */
+            margin: 0 auto !important; /* Center the map */
+            
+
+            .leaflet-top, .leaflet-right {
+                display: none;
+            }
+            
+        }
+
+        .waymark-map-container {
+            width: 100% !important;
+            max-width: 100% !important;
+            height: auto !important;
+            margin: 0 auto !important; /* Center the container */
+            padding: 0 !important; /* Remove padding */
+            overflow: visible !important; /* Ensure nothing is cropped */
+            page-break-after: always;
+        }
+
+    //     .waymark-map-container, 
+    // .waymark-map {
+    //     display: block !important;
+    //     position: absolute;
+    //     top: 0;
+    //     left: 0;
+    //     width: 100vw;
+    //     height: 100vh;
+    // }
+
+    // /* Ensure the map scales correctly */
+    // .leaflet-container {
+    //     width: 100% !important;
+    //     height: 100% !important;
+    // }
+    
+        // /* Optional: If the map itself needs specific centering or sizing */
+        // .waymark-map {
+        //     display: block;
+        //     margin: 0 auto;
+        //     width: 100%; /* Ensure the map takes up the full width of the container */
+        //     height: auto; /* Maintain aspect ratio */
+        // }
+
+        // .waymark-map-container {
+        //     height: 500px; /* Or whatever height is appropriate */
+        //     width: 100%;
+        // }
+
         #flush-collapsearrival {
             border: none !important;
         }
 
         .accordion-item__collapsearrival {
             flex-direction: row !important;
-            page-break-after: always;
+            // page-break-after: always;
         }
 
         .pdp-itinerary-day__accordion-clamp_main {
-            margin-bottom: 5mm !important;
+            margin-bottom: 3mm !important;
         }
 
         .accordion-item-ad__main {
@@ -352,15 +505,21 @@
         }
 
         .waymark-shortcode {
-            page-break-after: always;
+            // page-break-after: always;
         }
 
         .pdp-itinerary-day__accordion .pdp-itinerary-day__accordion-right img {
-            display: none !important;
+            // display: none !important;
+        }
+
+        .activity-column, .ride-column, .pdp-itinerary-day__accordion-left, .accordion-item-ad__sub {
+            break-inside: avoid;
         }
 
         .pdp-itinerary-day__accordion .pdp-itinerary-day__accordion-right {
-            width: 50% !important;
+            margin-bottom: 15px;
+            break-inside: avoid;
+            width: 100% !important;
         }
 
         .pdp-itinerary-heading {
@@ -378,10 +537,6 @@
         .pdp-itinerary-day__accordion {
             padding-right: 0mm !important;
             margin-bottom: 5mm !important;
-        }
-
-        .waymark-shortcode {
-            display: none !important;
         }
 
         nav {
@@ -419,11 +574,11 @@
         }
 
         .accordion-body .pdp-itinerary-heading {
-            display: none !important;
+            // display: none !important;
         }
 
         .accordion-body .pdp-itinerary-rides {
-            padding-top: 16px !important;
+            padding: 5px 0;
         }
 
         .accordion-item__collapsearrival .accordion-item-ad__main {
