--- a/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-overview-navigation-mobile.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-overview-navigation-mobile.scss
@@ -1,5 +1,7 @@
 // PDP sticky navigation Mobile
 .overview-menu-mobile{
+
+    border-bottom: 1px solid black;
     @media (min-width: 768px) {
         display: none;
     }
@@ -21,6 +23,10 @@
                 font-weight: bold;
             }
         }
+    }
+
+    .accordion-button:not(.collapsed) {
+        border-bottom: 1px solid $gray-300;
     }
     .accordion-flush .accordion-item .accordion-button{
         padding-left: 2rem;
