--- a/wp-content/themes/trek-travel-theme/src/scss/_search.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_search.scss
@@ -77,7 +77,7 @@
             // height: 300px;
             object-fit: cover;
             border-radius: 4px;
-            aspect-ratio: 4/3;
+            // aspect-ratio: 4/3;
         }
     }
     @media (max-width: 767px) {
@@ -85,7 +85,13 @@
             display: none;
         }
     }
-    @media (min-width: 767px) {
+    @include media-breakpoint-down(md) {
+        .gallery-carousel{
+            height: 350px;
+        }
+    }
+
+    @include media-breakpoint-down(sm) {
         .gallery-carousel{
             height: 300px;
         }
@@ -282,10 +288,7 @@
 }
 
 .ais-InfiniteHits-loadMore{
-    left: 43%;
-    @media (max-width: 767px) {
-        left: 33%;
-    }
+    
 }
 li.ais-Menu-item div div.menu-facet-container a.ais-anchor span.f-check-active {
     display: none !important;
@@ -462,6 +465,13 @@ a.refineLink {
 }
 
 .ais-InfiniteHits{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 80px;
+    @include media-breakpoint-down(lg) {
+        margin-bottom: 50px;
+    }
     ol{
         @media (max-width: 767px) {
             padding: 0 4px;
@@ -490,14 +500,14 @@ a.refineLink {
         display: none;
     }
 }
-.search-results-container, .plp-list-container{
-    @media (min-width: 1440px) {
-        max-width: 1350px !important;
-        .ais-InfiniteHits-list{
-            padding-left: 0 !important;
-        }
-    }
-}
+// .search-results-container, .plp-list-container{
+//     @media (min-width: 1440px) {
+//         // max-width: 1350px !important;
+//         .ais-InfiniteHits-list{
+//             // padding-left: 0 !important;
+//         }
+//     }
+// }
 
 .plp-list-container{
     .list-counter{
