Feature: Trips Sync updates (#464)
* Trip Sync: add ability to sync by trip year, introduce single trip details sync, improve code and doc

Asana Task: https://app.asana.com/0/1205828450090907/1208063269539642/f

* Trips Sync: add options to can sync by itineraryCode or itineraryId

Asana Task: https://app.asana.com/0/1205828450090907/1208063269539642/f

* NS Trips Sync: optimization of the code
reduce duplicated code by moving the collection of the filter type and filter value before actions
Asana Task: https://app.asana.com/0/1205828450090907/1208063269539642/f

* Single Trip Detils Sync from NS: add single trip details sync functionality
refactor the code to allow a single trip details sync from NS
Asana Task: https://app.asana.com/0/1205828450090907/1208063269539642/f

* Trips Sync: remove unused function
remove unused function attached to the admin_notices action
Asana Task: https://app.asana.com/0/1205828450090907/1208063269539642/f

* Manual Trip Details Sync: add mising 'a' in the title

Asana Task: https://app.asana.com/0/1205828450090907/1208063269539642/f

* Trip Sync Logs: change the time_range to filter_value in the logs
sounds more accurate
Asana Task: https://app.asana.com/0/1205828450090907/1208063269539642/f

* Fix Trips Sync: add mising trips fetch code
fix to take all trips data, to can store it in the DB
Asana Task: https://app.asana.com/0/1205472772784381/1208063269539642/f

* Refactor Trips Sync: adjust function that get last modified trips
make it  support all data returns or IDs only
Asana Task: https://app.asana.com/0/1205472772784381/1208063269539642/f

* Trips Sync: misc cahnge logs wording

Asana Task: https://app.asana.com/0/1205472772784381/1208063269539642/f

* Trips Sync: hide the option for sync by itineraryId from the admin panel
This option is very similar to By Itinerary Code. I am hiding it visually so we have it as a reference and option if we need to use it in the future
Asana Task: htt

--- a/wp-content/plugins/trek-travel-netsuite-integration/assets/ttnsw-styles.css
+++ b/wp-content/plugins/trek-travel-netsuite-integration/assets/ttnsw-styles.css
@@ -290,3 +290,18 @@ table.table-old.tt-booking-table .expandable-cell.expanded .expand-cell:before {
     opacity: 1;
     cursor: pointer;
 }
+.dx-hidden-section {
+    border: none !important;
+    box-shadow: none !important;
+}
+.tt-sync-page {
+    padding-right: 20px;
+}
+.tt-sync-page .tt-wc-ns-admin-wrap > div {
+    /* background-color: #fff; */
+    border: 1px solid #c3c4c7;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    padding: 1rem 1.5rem 1.5rem;
+    margin: 1rem 0;
+    border-radius: 6px;
+}
